--- a/NetService/server.vcxproj
+++ b/NetService/server.vcxproj
@@ -181,7 +181,6 @@
     <ClInclude Include="src\NetService.h" />
     <ClInclude Include="src\RclMessageHandler.hpp" />
     <ClInclude Include="src\RliMessageHandler.hpp" />
-    <ClInclude Include="src\RoomPool.cpp" />
     <ClInclude Include="src\Room.h" />
     <ClInclude Include="src\RoomManager.h" />
     <ClInclude Include="src\RoomPool.h" />
@@ -218,6 +217,7 @@
     <ClCompile Include="src\NetService.cpp" />
     <ClCompile Include="src\Room.cpp" />
     <ClCompile Include="src\RoomManager.cpp" />
+    <ClCompile Include="src\RoomPool.cpp" />
     <ClCompile Include="src\SQLUserStorage.cpp" />
     <ClCompile Include="src\UserManage.cpp" />
     <ClCompile Include="src\UserStorage.cpp" />
