--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -80,6 +80,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -102,7 +103,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>cppunitd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;cppunitd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -129,6 +130,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>
@@ -247,7 +249,6 @@
     <ClInclude Include="Logic\UserSession\StrMatch.hpp" />
     <ClInclude Include="net\INet.h" />
     <ClInclude Include="net\Net.h" />
-    <ClInclude Include="net\Socket\AsyncSocket.h" />
     <ClInclude Include="net\Socket\AsyncSocketEx.h" />
     <ClInclude Include="net\Socket\ISocket.h" />
     <ClInclude Include="net\Socket\SockWnd.h" />
@@ -302,7 +303,6 @@
     <ClCompile Include="Logic\UserSession\LoginImpl.cpp" />
     <ClCompile Include="Logic\UserSession\usersessionTest.cpp" />
     <ClCompile Include="net\Net.cpp" />
-    <ClCompile Include="net\Socket\AsyncSocket.cpp" />
     <ClCompile Include="net\Socket\AsyncSocketEx.cpp" />
     <ClCompile Include="net\Socket\SockWnd.cpp" />
     <ClCompile Include="net\Socket\VNOCSocket.cpp" />
