--- a/UTProduce/UTProduce/UTProduce.vcxproj
+++ b/UTProduce/UTProduce/UTProduce.vcxproj
@@ -43,6 +43,7 @@
     <ProjectGuid>{82CD5DB3-2ED5-4CBF-A33F-49749CE9484D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>UTProduce</RootNamespace>
+    <ProjectName>UTProduce_vs12</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
