fix get below linking erorr when try to build sqlite3 in release mode

--- a/NetService/server.vcxproj.filters
+++ b/NetService/server.vcxproj.filters
@@ -244,12 +244,14 @@
     <ClCompile Include="..\ThirdLibs\TinyXML\tinyxmlparser.cpp">
       <Filter>Tinyxml</Filter>
     </ClCompile>
-    <ClCompile Include="src\RoomPool.cpp" />
     <ClCompile Include="src\VNOCUserManager.cpp">
       <Filter>modules\obj</Filter>
     </ClCompile>
     <ClCompile Include="src\DBCached.cpp">
       <Filter>database\DBCached</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RoomPool.cpp">
+      <Filter>modules\room</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
