--- a/NetService/server.vcxproj
+++ b/NetService/server.vcxproj
@@ -190,7 +190,9 @@
     <ClInclude Include="src\AsioTcpServer.hpp" />
     <ClInclude Include="src\Common.h" />
     <ClInclude Include="src\Config.hpp" />
-    <ClInclude Include="src\DBCached.h" />
+    <ClInclude Include="src\DBCommand.h" />
+    <ClInclude Include="src\DBConnection.h" />
+    <ClInclude Include="src\DBDefine.h" />
     <ClInclude Include="src\FileUserStorage.h" />
     <ClInclude Include="src\GlobalDefinition.h" />
     <ClInclude Include="src\mysql\MysqlWrapper.h" />
@@ -240,7 +242,8 @@
     <ClCompile Include="..\ThirdLibs\TinyXML\tinyxmlparser.cpp" />
     <ClCompile Include="src\AsioTcpServer.cpp" />
     <ClCompile Include="src\Config.cpp" />
-    <ClCompile Include="src\DBCached.cpp" />
+    <ClCompile Include="src\DBCommand.cpp" />
+    <ClCompile Include="src\DBConnection.cpp" />
     <ClCompile Include="src\FileUserStorage.cpp" />
     <ClCompile Include="src\mysql\MysqlWrapper.cpp" />
     <ClCompile Include="src\NetService.cpp" />
